src/main/java/com/example/rekreativ/error/exceptions/IllegalParameterException.java
package com.example.rekreativ.error.exceptions;

public class IllegalParameterException extends RuntimeException {
    public IllegalParameterException(String message) {
        super(message);
    }
}
